既存資料タブの更新と各詳細ページへの項目数列追加
- user_project_detail.html: 既存資料タブに項目数列追加、表示方法・検索削除、購読数削除、公開設定を社内（購読）に変更、アクションに表示ボタン追加
- user_project_detail_doc_investigate.html: 項目数列追加、作成日時を更新日時に変更、作成者列追加
- user_project_detail_doc_plan1_detail.html: 項目数列追加
- user_project_detail_doc_plan1_3d_detail.html: 項目数列追加
- user_project_detail_doc_plan1_estimate_detail.html: 項目数列追加
- user_project_detail_doc_plan1_finance_detail.html: 項目数列追加

--- a/system_user_cms/user_project_detail_doc_plan1_3d_detail.html
+++ b/system_user_cms/user_project_detail_doc_plan1_3d_detail.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>案件管理（現地調査）</title>
+    <title>案件管理（3Dパース）</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@
 
         <!-- タイトル -->
     <div class="mb-2">
-        <h4>プラン１_リノベプラン</h4>
+        <h4>プラン１_3Dパース</h4>
       </div>
   
       <!-- パンくずリスト -->
@@ -82,7 +82,7 @@
           <li class="breadcrumb-item">
             <a href="user_project_detail_doc_plan1.html" class="text-decoration-none">プラン１</a>
           </li>
-          <li class="breadcrumb-item active" aria-current="page">お客様資料詳細</li>
+          <li class="breadcrumb-item active" aria-current="page">3Dパース詳細</li>
         </ol>
       </nav>
   
@@ -109,61 +109,31 @@
             </thead>
             <tbody>
               <tr>
-                <td>案件名_リノベプラン_20250507</td>
+                <td>案件名_3Dパース_20250509</td>
                 <td>1</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250507', 'staff')">公開</button>
+                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_3Dパース_20250509', 'staff')">公開</button>
                   <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（3）</button>
                 </td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250507', 'partner')">公開</button>
+                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_3Dパース_20250509', 'partner')">公開</button>
                   <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalPartner">（3）</button>
                 </td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250507', 'expert')">非公開</button>
+                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_3Dパース_20250509', 'expert')">非公開</button>
                   <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（0）</button>
                 </td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250507', 'client')">公開</button>
+                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_3Dパース_20250509', 'client')">公開</button>
                   <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalClient">（2）</button>
                 </td>
                 <td>河本直己</td>
-                <td>2025/05/07 10:00</td>
+                <td>2025/05/09 11:45</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-primary" onclick="openDownloadModal('案件名_リノベプラン_20250507')">
+                  <button class="btn btn-sm btn-outline-primary" onclick="openDownloadModal('案件名_3Dパース_20250509')">
                     <i class="bi bi-file-earmark-arrow-down"></i> ダウンロード
                   </button>
-                  <button class="btn btn-sm btn-outline-info" onclick="openViewModal('案件名_リノベプラン_20250507')">
-                    <i class="bi bi-eye"></i> 表示
-                  </button>
-                </td>
-              </tr>
-              <tr>
-                <td>案件名_リノベプラン_20250506</td>
-                <td>1</td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250506', 'staff')">公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（3）</button>
-                </td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250506', 'partner')">公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalPartner">（3）</button>
-                </td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250506', 'expert')">非公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（0）</button>
-                </td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250506', 'client')">公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalClient">（1）</button>
-                </td>
-                <td>河本直己</td>
-                <td>2025/05/06 10:30</td>
-                <td>
-                  <button class="btn btn-sm btn-outline-primary" onclick="openDownloadModal('案件名_リノベプラン_20250506')">
-                    <i class="bi bi-file-earmark-arrow-down"></i> ダウンロード
-                  </button>
-                  <button class="btn btn-sm btn-outline-info" onclick="openViewModal('案件名_リノベプラン_20250506')">
+                  <button class="btn btn-sm btn-outline-info" onclick="openViewModal('案件名_3Dパース_20250509')">
                     <i class="bi bi-eye"></i> 表示
                   </button>
                 </td>
@@ -268,10 +238,10 @@
                   <div class="mb-3">
                     <label class="form-label">形式を選択してください</label>
                     <select class="form-select" id="downloadFormat" required>
-                      <option value="dxf">DXF</option>
-                      <option value="jww">JWW</option>
-                      <option value="dwg">DWG</option>
+                      <option value="jpg">JPG</option>
+                      <option value="png">PNG</option>
                       <option value="pdf">PDF</option>
+                      <option value="obj">OBJ</option>
                     </select>
                   </div>
                 </form>
@@ -317,13 +287,13 @@
           <div class="modal-dialog modal-xl">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="viewModalLabel">資料表示</h5>
+                <h5 class="modal-title" id="viewModalLabel">3Dパース表示</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <div class="mb-3">
                   <div class="d-flex justify-content-between align-items-center">
-                    <h6 id="viewDocumentName">案件名_リノベプラン_20250507</h6>
+                    <h6 id="viewDocumentName">案件名_3Dパース_20250509</h6>
                     <div>
                       <button class="btn btn-sm btn-outline-primary me-2">
                         <i class="bi bi-download"></i> ダウンロード
@@ -336,15 +306,18 @@
                 </div>
                 <div class="border rounded p-3" style="min-height: 500px; background-color: #f8f9fa;">
                   <div class="text-center py-5">
-                    <i class="bi bi-file-earmark-text display-1 text-muted"></i>
-                    <h5 class="mt-3 text-muted">PDFビューアー</h5>
-                    <p class="text-muted">実際の実装では、ここにPDFビューアーや画像ビューアーが表示されます。</p>
+                    <i class="bi bi-cube display-1 text-muted"></i>
+                    <h5 class="mt-3 text-muted">3Dビューアー</h5>
+                    <p class="text-muted">実際の実装では、ここに3Dビューアーが表示されます。</p>
                     <div class="mt-3">
                       <button class="btn btn-outline-primary btn-sm me-2">
                         <i class="bi bi-zoom-in"></i> 拡大
                       </button>
-                      <button class="btn btn-sm btn-outline-primary me-2">
+                      <button class="btn btn-outline-primary btn-sm me-2">
                         <i class="bi bi-zoom-out"></i> 縮小
+                      </button>
+                      <button class="btn btn-outline-primary btn-sm me-2">
+                        <i class="bi bi-arrow-clockwise"></i> 回転
                       </button>
                       <button class="btn btn-outline-primary btn-sm">
                         <i class="bi bi-arrows-fullscreen"></i> 全画面
