--- a/system_user_cms/user_project_detail_doc_plan1_finance_detail.html
+++ b/system_user_cms/user_project_detail_doc_plan1_finance_detail.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>案件管理（現地調査）</title>
+    <title>案件管理（資金計画書）</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@
 
         <!-- タイトル -->
     <div class="mb-2">
-        <h4>プラン１_リノベプラン</h4>
+        <h4>プラン１_資金計画書</h4>
       </div>
   
       <!-- パンくずリスト -->
@@ -82,7 +82,7 @@
           <li class="breadcrumb-item">
             <a href="user_project_detail_doc_plan1.html" class="text-decoration-none">プラン１</a>
           </li>
-          <li class="breadcrumb-item active" aria-current="page">お客様資料詳細</li>
+          <li class="breadcrumb-item active" aria-current="page">資金計画書</li>
         </ol>
       </nav>
   
@@ -99,8 +99,6 @@
                 <th>資料名称</th>
                 <th>項目数</th>
                 <th>社内（購読）</th>
-                <th>協力業者（購読）</th>
-                <th>専門業者（購読）</th>
                 <th>施主（購読）</th>
                 <th>作成者</th>
                 <th>更新日時</th>
@@ -109,61 +107,23 @@
             </thead>
             <tbody>
               <tr>
-                <td>案件名_リノベプラン_20250507</td>
+                <td>案件名_資金計画書</td>
                 <td>1</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250507', 'staff')">公開</button>
+                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_資金計画書', 'staff')">公開</button>
                   <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（3）</button>
                 </td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250507', 'partner')">公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalPartner">（3）</button>
-                </td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250507', 'expert')">非公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（0）</button>
-                </td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250507', 'client')">公開</button>
+                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_資金計画書', 'client')">公開</button>
                   <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalClient">（2）</button>
                 </td>
                 <td>河本直己</td>
-                <td>2025/05/07 10:00</td>
+                <td>2025/05/11 09:15</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-primary" onclick="openDownloadModal('案件名_リノベプラン_20250507')">
+                  <button class="btn btn-sm btn-outline-primary" onclick="openDownloadModal('案件名_資金計画書')">
                     <i class="bi bi-file-earmark-arrow-down"></i> ダウンロード
                   </button>
-                  <button class="btn btn-sm btn-outline-info" onclick="openViewModal('案件名_リノベプラン_20250507')">
-                    <i class="bi bi-eye"></i> 表示
-                  </button>
-                </td>
-              </tr>
-              <tr>
-                <td>案件名_リノベプラン_20250506</td>
-                <td>1</td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250506', 'staff')">公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（3）</button>
-                </td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250506', 'partner')">公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalPartner">（3）</button>
-                </td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250506', 'expert')">非公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（0）</button>
-                </td>
-                <td>
-                  <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_リノベプラン_20250506', 'client')">公開</button>
-                  <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalClient">（1）</button>
-                </td>
-                <td>河本直己</td>
-                <td>2025/05/06 10:30</td>
-                <td>
-                  <button class="btn btn-sm btn-outline-primary" onclick="openDownloadModal('案件名_リノベプラン_20250506')">
-                    <i class="bi bi-file-earmark-arrow-down"></i> ダウンロード
-                  </button>
-                  <button class="btn btn-sm btn-outline-info" onclick="openViewModal('案件名_リノベプラン_20250506')">
+                  <button class="btn btn-sm btn-outline-info" onclick="openViewModal('案件名_資金計画書')">
                     <i class="bi bi-eye"></i> 表示
                   </button>
                 </td>
@@ -213,46 +173,6 @@
             </div>
           </div>
         </div>
-        <!-- 協力業者購読者モーダル -->
-        <div class="modal fade" id="subscribersModalPartner" tabindex="-1" aria-labelledby="subscribersModalPartnerLabel" aria-hidden="true">
-          <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="subscribersModalPartnerLabel">協力業者購読者一覧</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body small-text">
-                <ul class="list-unstyled mb-0">
-                  <li>1. 株式会社ABC建設 工事担当 田中 三郎</li>
-                  <li>2. 株式会社XYZ設計 設計担当 高橋 四郎</li>
-                  <li>3. 株式会社123設備 設備担当 伊藤 五郎</li>
-                </ul>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">閉じる</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- 専門業者購読者モーダル -->
-        <div class="modal fade" id="subscribersModalExpert" tabindex="-1" aria-labelledby="subscribersModalExpertLabel" aria-hidden="true">
-          <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="subscribersModalExpertLabel">専門業者購読者一覧</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body small-text">
-                <ul class="list-unstyled mb-0">
-                  <li>購読者はいません</li>
-                </ul>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">閉じる</button>
-              </div>
-            </div>
-          </div>
-        </div>
     
         <!-- ダウンロード形式選択モーダル -->
         <div class="modal fade" id="downloadModal" tabindex="-1" aria-labelledby="downloadModalLabel" aria-hidden="true">
@@ -268,10 +188,10 @@
                   <div class="mb-3">
                     <label class="form-label">形式を選択してください</label>
                     <select class="form-select" id="downloadFormat" required>
-                      <option value="dxf">DXF</option>
-                      <option value="jww">JWW</option>
-                      <option value="dwg">DWG</option>
                       <option value="pdf">PDF</option>
+                      <option value="excel">Excel</option>
+                      <option value="word">Word</option>
+                      <option value="csv">CSV</option>
                     </select>
                   </div>
                 </form>
@@ -317,13 +237,13 @@
           <div class="modal-dialog modal-xl">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="viewModalLabel">資料表示</h5>
+                <h5 class="modal-title" id="viewModalLabel">資金計画書表示</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <div class="mb-3">
                   <div class="d-flex justify-content-between align-items-center">
-                    <h6 id="viewDocumentName">案件名_リノベプラン_20250507</h6>
+                    <h6 id="viewDocumentName">案件名_資金計画書</h6>
                     <div>
                       <button class="btn btn-sm btn-outline-primary me-2">
                         <i class="bi bi-download"></i> ダウンロード
@@ -336,14 +256,14 @@
                 </div>
                 <div class="border rounded p-3" style="min-height: 500px; background-color: #f8f9fa;">
                   <div class="text-center py-5">
-                    <i class="bi bi-file-earmark-text display-1 text-muted"></i>
-                    <h5 class="mt-3 text-muted">PDFビューアー</h5>
-                    <p class="text-muted">実際の実装では、ここにPDFビューアーや画像ビューアーが表示されます。</p>
+                    <i class="bi bi-calculator display-1 text-muted"></i>
+                    <h5 class="mt-3 text-muted">資金計画書ビューアー</h5>
+                    <p class="text-muted">実際の実装では、ここに資金計画書の内容が表示されます。</p>
                     <div class="mt-3">
                       <button class="btn btn-outline-primary btn-sm me-2">
                         <i class="bi bi-zoom-in"></i> 拡大
                       </button>
-                      <button class="btn btn-sm btn-outline-primary me-2">
+                      <button class="btn btn-outline-primary btn-sm me-2">
                         <i class="bi bi-zoom-out"></i> 縮小
                       </button>
                       <button class="btn btn-outline-primary btn-sm">
@@ -409,12 +329,6 @@
             case 'staff':
               privacyTypeText = '社内公開設定';
               break;
-            case 'partner':
-              privacyTypeText = '協力業者公開設定';
-              break;
-            case 'expert':
-              privacyTypeText = '専門業者公開設定';
-              break;
             case 'client':
               privacyTypeText = '施主公開設定';
               break;
@@ -455,10 +369,6 @@
           switch(privacyType) {
             case 'staff':
               return '社内ユーザー';
-            case 'partner':
-              return '協力業者';
-            case 'expert':
-              return '専門業者';
             case 'client':
               return '施主';
             default:
