--- a/system_user_cms/user_project_detail.html
+++ b/system_user_cms/user_project_detail.html
@@ -1404,9 +1404,8 @@
                             <tr>
                               <th>資料名称</th>
                               <th>項目数</th>
-                              <th>購読数</th>
-                              <th>社内公開設定</th>
-                              <th>外部専門家公開</th>
+                              <th>社内（購読）</th>
+                              <th>外部専門家（購読）</th>
                               <th>取得日時</th>
                               <th>アクション</th>
                             </tr>
@@ -1415,16 +1414,13 @@
                             <tr>
                               <td>公図</td>
                               <td>1</td>
-                              <td><a href="#">10</a></td>
                               <td>
-                                <button class="btn btn-sm btn-outline-primary" onclick="openPrivacyModal('公図', 'internal')">
-                                  公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('公図', 'staff')">公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（3）</button>
                               </td>
                               <td>
-                                <button class="btn btn-sm btn-outline-primary" onclick="openPrivacyModal('公図', 'external')">
-                                  公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('公図', 'expert')">公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（2）</button>
                               </td>
                               <td>2025/05/01 09:00</td>
                               <td>
@@ -1439,16 +1435,13 @@
                             <tr>
                               <td>地籍測量図</td>
                               <td>1</td>
-                              <td><a href="#">5</a></td>
                               <td>
-                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('地籍測量図', 'internal')">
-                                  非公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('地籍測量図', 'staff')">非公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（0）</button>
                               </td>
                               <td>
-                                <button class="btn btn-sm btn-outline-primary" onclick="openPrivacyModal('地籍測量図', 'external')">
-                                  公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('地籍測量図', 'expert')">公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（2）</button>
                               </td>
                               <td>2025/05/02 10:00</td>
                               <td>
@@ -1463,16 +1456,13 @@
                             <tr>
                               <td>登記簿謄本（土地）</td>
                               <td>1</td>
-                              <td><a href="#">8</a></td>
                               <td>
-                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('登記簿謄本（土地）', 'internal')">
-                                  非公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('登記簿謄本（土地）', 'staff')">非公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（0）</button>
                               </td>
                               <td>
-                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('登記簿謄本（土地）', 'external')">
-                                  非公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('登記簿謄本（土地）', 'expert')">非公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（0）</button>
                               </td>
                               <td>2025/05/03 11:00</td>
                               <td>
@@ -1487,16 +1477,13 @@
                             <tr>
                               <td>登記簿謄本（建物）</td>
                               <td>1</td>
-                              <td><a href="#">7</a></td>
                               <td>
-                                <button class="btn btn-sm btn-outline-primary" onclick="openPrivacyModal('登記簿謄本（建物）', 'internal')">
-                                  公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('登記簿謄本（建物）', 'staff')">公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（3）</button>
                               </td>
                               <td>
-                                <button class="btn btn-sm btn-outline-primary" onclick="openPrivacyModal('登記簿謄本（建物）', 'external')">
-                                  公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('登記簿謄本（建物）', 'expert')">公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（2）</button>
                               </td>
                               <td>2025/05/04 12:00</td>
                               <td>
@@ -1511,16 +1498,13 @@
                             <tr>
                               <td>前面道路要約書</td>
                               <td>1</td>
-                              <td><a href="#">4</a></td>
                               <td>
-                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('前面道路要約書', 'internal')">
-                                  非公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('前面道路要約書', 'staff')">非公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（0）</button>
                               </td>
                               <td>
-                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('前面道路要約書', 'external')">
-                                  非公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('前面道路要約書', 'expert')">非公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（0）</button>
                               </td>
                               <td>2025/05/05 13:00</td>
                               <td>
@@ -1535,16 +1519,13 @@
                             <tr>
                               <td>建物図面</td>
                               <td>1</td>
-                              <td><a href="#">6</a></td>
                               <td>
-                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('建物図面', 'internal')">
-                                  非公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('建物図面', 'staff')">非公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（0）</button>
                               </td>
                               <td>
-                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('建物図面', 'external')">
-                                  非公開
-                                </button>
+                                <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('建物図面', 'expert')">非公開</button>
+                                <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalExpert">（0）</button>
                               </td>
                               <td>2025/05/06 14:00</td>
                               <td>
@@ -1553,6 +1534,13 @@
                                 </button>
                                 <button class="btn btn-sm btn-outline-primary" onclick="viewDocument('建物図面')">
                                   <i class="bi bi-eye"></i> 表示
+                                </button>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="6" class="text-center">
+                                <button type="button" class="btn btn-primary" onclick="addNewOfficialDocument()">
+                                  <i class="bi bi-plus-circle me-2"></i>新規登録
                                 </button>
                               </td>
                             </tr>
@@ -1571,33 +1559,15 @@
                     <button class="btn btn-sm btn-outline-secondary">編集</button>
                   </div>
                   <div class="card-body">
-                    <!-- 表示方法＆検索 -->
-                    <div class="d-flex justify-content-between align-items-center mb-3">
-                      <div class="d-flex align-items-center">
-                        <span class="me-2">表示方法：</span>
-                        <button class="btn btn-outline-primary me-2">
-                          <i class="bi bi-folder"></i>
-                        </button>
-                        <button class="btn btn-outline-secondary me-4">
-                          <i class="bi bi-list"></i>
-                        </button>
-                        <select class="form-select form-select-sm me-2" style="width:auto; display:inline-block;">
-                          <option value="created">作成日順</option>
-                        </select>
-                      </div>
-                      <div class="input-group" style="width:300px;">
-                        <input type="text" class="form-control" placeholder="キーワードを入力">
-                        <button class="btn btn-outline-secondary" type="button">検索</button>
-                      </div>
-                    </div>
+
                     <!-- 資料テーブル -->
                     <div class="table-responsive">
                       <table class="table table-hover table-bordered mb-0">
                         <thead class="table-light">
                           <tr>
                             <th>資料名称</th>
-                            <th>購読数</th>
-                            <th>公開設定</th>
+                            <th>項目数</th>
+                            <th>社内（購読）</th>
                             <th>取得日時</th>
                             <th>アクション</th>
                           </tr>
@@ -1605,61 +1575,91 @@
                         <tbody>
                           <tr>
                             <td>平面図</td>
-                            <td><a href="#">12</a></td>
-                            <td>公開</td>
+                            <td>1</td>
+                            <td>
+                              <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('平面図', 'staff')">公開</button>
+                              <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（3）</button>
+                            </td>
                             <td>2025/05/04 12:00</td>
                             <td>
                               <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#uploadModal">
                                 アップロード
                               </button>
+                              <button class="btn btn-sm btn-outline-info" onclick="viewDocument('平面図')">
+                                <i class="bi bi-eye"></i> 表示
+                              </button>
                             </td>
                           </tr>
                           <tr>
                             <td>立面図</td>
-                            <td><a href="#">9</a></td>
-                            <td>限定公開</td>
+                            <td>1</td>
+                            <td>
+                              <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('立面図', 'staff')">公開</button>
+                              <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（2）</button>
+                            </td>
                             <td>2025/05/05 13:00</td>
                             <td>
                               <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#uploadModal">
                                 アップロード
                               </button>
+                              <button class="btn btn-sm btn-outline-info" onclick="viewDocument('立面図')">
+                                <i class="bi bi-eye"></i> 表示
+                              </button>
                             </td>
                           </tr>
                           <tr>
                             <td>敷地図</td>
-                            <td><a href="#">6</a></td>
-                            <td>非公開</td>
+                            <td>1</td>
+                            <td>
+                              <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('敷地図', 'staff')">非公開</button>
+                              <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（0）</button>
+                            </td>
                             <td>2025/05/06 14:00</td>
                             <td>
                               <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#uploadModal">
                                 アップロード
                               </button>
+                              <button class="btn btn-sm btn-outline-info" onclick="viewDocument('敷地図')">
+                                <i class="bi bi-eye"></i> 表示
+                              </button>
                             </td>
                           </tr>
                           <tr>
                             <td>確認通知書</td>
-                            <td><a href="#">3</a></td>
-                            <td>公開</td>
+                            <td>1</td>
+                            <td>
+                              <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('確認通知書', 'staff')">公開</button>
+                              <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（1）</button>
+                            </td>
                             <td>2025/05/07 15:00</td>
                             <td>
                               <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#uploadModal">
                                 アップロード
                               </button>
+                              <button class="btn btn-sm btn-outline-info" onclick="viewDocument('確認通知書')">
+                                <i class="bi bi-eye"></i> 表示
+                              </button>
                             </td>
                           </tr>
                           <tr>
                             <td>不動産売買契約書</td>
-                            <td><a href="#">5</a></td>
-                            <td>限定公開</td>
+                            <td>1</td>
+                            <td>
+                              <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('不動産売買契約書', 'staff')">公開</button>
+                              <button class="btn btn-link p-0 small-text align-baseline" data-bs-toggle="modal" data-bs-target="#subscribersModalStaff">（1）</button>
+                            </td>
                             <td>2025/05/08 16:00</td>
                             <td>
                               <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#uploadModal">
                                 アップロード
                               </button>
+                              <button class="btn btn-sm btn-outline-info" onclick="viewDocument('不動産売買契約書')">
+                                <i class="bi bi-eye"></i> 表示
+                              </button>
                             </td>
                           </tr>
                           <tr>
-                            <td colspan="5" class="text-center">
+                            <td colspan="6" class="text-center">
                               <button type="button" class="btn btn-sm btn-outline-secondary">
                                 新規登録
                               </button>
@@ -1844,6 +1844,11 @@
     // 登記資料の表示機能（ダミー）
     function viewDocument(documentName) {
       alert(`${documentName}の表示機能です。\n実際の実装では、PDFビューアーや画像ビューアーが開きます。`);
+    }
+    
+    // 新規登録ボタンの機能（ダミー）
+    function addNewOfficialDocument() {
+      alert('新規登録ボタンがクリックされました。\n実際の実装では、新しい登記資料の登録フォームが表示されます。\n\n登録可能な資料例：\n・建物図面\n・地積測量図\n・登記簿謄本\n・公図\n・前面道路要約書');
     }
     
     // 公開設定変更モーダルの制御
