--- a/system_user_cms/user_project_detail_doc_investigate.html
+++ b/system_user_cms/user_project_detail_doc_investigate.html
@@ -90,6 +90,7 @@
           <thead class="table-light">
             <tr>
               <th>資料名称</th>
+              <th>ステータス</th>
               <th>項目数</th>
               <th>社内（購読）</th>
               <th>協力業者（購読）</th>
@@ -102,6 +103,10 @@
           <tbody>
             <tr>
               <td>案件名_現地調査報告書_20250507</td>
+              <td>
+                <span class="badge bg-success">確定</span>
+                <i class="bi bi-lock-fill ms-1"></i>
+              </td>
               <td>1</td>
               <td>
                 <button class="btn btn-sm btn-outline-secondary" onclick="openPrivacyModal('案件名_現地調査報告書_20250507', 'staff')">公開</button>
