--- a/system_user_cms/user_settings_quote.html
+++ b/system_user_cms/user_settings_quote.html
@@ -218,13 +218,22 @@
                                             </div>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>
+                                            <input type="text" class="form-control form-control-sm" placeholder="表示区分名を入力">
+                                        </td>
+                                        <td></td>
+                                        <td>
+                                            <div class="d-flex align-items-center">
+                                                <button class="btn btn-primary btn-sm">
+                                                    <i class="bi bi-plus-circle"></i> 追加
+                                                </button>
+                                            </div>
+                                        </td>
+                                    </tr>
                                 </tbody>
                             </table>
-                        </div>
-                        <div class="mt-3">
-                            <button class="btn btn-primary btn-sm">
-                                <i class="bi bi-plus-circle"></i> 追加
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -971,13 +980,34 @@
                                     </div>
                                 </td>
                             </tr>
+                            <tr>
+                                <td>1-22</td>
+                                <td>
+                                    <input type="text" class="form-control form-control-sm" placeholder="工事区分名を入力">
+                                </td>
+                                <td>
+                                    <select class="form-select form-select-sm">
+                                        <option value="1">1 仮設工事</option>
+                                        <option value="2">2 解体工事</option>
+                                        <option value="3">3 基礎・躯体工事</option>
+                                        <option value="4">4 外装工事</option>
+                                        <option value="5">5 内装工事</option>
+                                        <option value="6">6 設備工事</option>
+                                        <option value="7">7 その他</option>
+                                    </select>
+                                </td>
+                                <td></td>
+                                <td></td>
+                                <td>
+                                    <div class="d-flex align-items-center">
+                                        <button class="btn btn-primary btn-sm">
+                                            <i class="bi bi-plus-circle"></i> 追加
+                                        </button>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
-                </div>
-                <div class="mt-3">
-                    <button class="btn btn-primary btn-sm">
-                        <i class="bi bi-plus-circle"></i> 追加
-                    </button>
                 </div>
                     </div>
                 </div>
