Update provider CMS system with comprehensive features
- Enhanced provider dashboard with contract renewal and trial management
- Added notification management system with public/private status
- Implemented inquiry management with client tracking
- Created audit log system for system monitoring
- Added billing management with payment reconciliation
- Implemented tax settings for consumption tax management
- Added partner settings for external business outsourcing
- Enhanced user management with status toggle functionality
- Updated company list with contract renewal filtering
- Added comprehensive company detail page with contract actions
- Improved header navigation and menu structure

--- a/system_provider_cms/provider_header.html
+++ b/system_provider_cms/provider_header.html
@@ -37,21 +37,40 @@
             </div>
             <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <!-- クライアント -->
+                <!-- ダッシュボード -->
                 <li class="nav-item">
-                <a class="nav-link" href="provider_company_list.html" style="color: white;">クライアント</a>
+                <a class="nav-link" href="provider_dashboard.html" style="color: white;">ダッシュボード</a>
                 </li>
-                <!-- エージェント -->
+                <!-- クライアント管理 -->
                 <li class="nav-item">
-                    <a class="nav-link" href="provider_agent_list.html" style="color: white;">エージェント</a>
-                    </li>
-                <!-- 分析 -->
-                <li class="nav-item">
-                <a class="nav-link" href="provider_kpi.html" style="color: white;">分析</a>
+                <a class="nav-link" href="provider_company_list.html" style="color: white;">クライアント管理</a>
                 </li>
-                <!-- テンプレート -->
+                <!-- 請求管理 -->
                 <li class="nav-item">
-                <a class="nav-link" href="provider_template_list.html" style="color: white;">テンプレート</a>
+                <a class="nav-link" href="provider_bill_management.html" style="color: white;">請求管理</a>
+                </li>
+            <!-- お知らせ管理 -->
+            <li class="nav-item">
+            <a class="nav-link" href="provider_notification_management.html" style="color: white;">お知らせ管理</a>
+            </li>
+                <!-- 問い合わせ -->
+                <li class="nav-item">
+                <a class="nav-link" href="provider_inquiry_management.html" style="color: white;">問い合わせ</a>
+                </li>
+                <!-- 監査ログ -->
+                <li class="nav-item">
+                <a class="nav-link" href="provider_logs.html" style="color: white;">監査ログ</a>
+                </li>
+                <!-- 設定 -->
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="settingsDropdown" role="button" data-bs-toggle="dropdown" style="color: white;">
+                    設定
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="provider_tax_settings.html">消費税設定</a></li>
+                    <li><a class="dropdown-item" href="provider_partner_settings.html">外部協力会社設定</a></li>
+                    <li><a class="dropdown-item" href="provider_user_manage.html">ユーザー設定</a></li>
+                </ul>
                 </li>
                 
                 <!-- ログアウトアイコン -->
