--- a/system_provider_cms/provider_notification_management.html
+++ b/system_provider_cms/provider_notification_management.html
@@ -34,15 +34,11 @@
         </div>
 
         <!-- 統計情報 -->
-        <div class="alert alert-info">
-            <div class="row">
-                <div class="col-md-6">
-                    <strong>お知らせ数:</strong> <span id="totalNotifications">12</span>件
-                </div>
-                <div class="col-md-6">
-                    <strong>公開数:</strong> <span id="activeNotifications">8</span>件
-                </div>
-            </div>
+        <div class="mb-3">
+            <small class="text-muted">
+                お知らせ数: <span class="badge bg-info">12件</span> | 
+                公開数: <span class="badge bg-success">8件</span>
+            </small>
         </div>
 
         <!-- フィルター・検索 -->
