--- a/system_provider_cms/provider_bill_management.html
+++ b/system_provider_cms/provider_bill_management.html
@@ -85,14 +85,6 @@
         <!-- ページタイトル -->
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h4 class="mb-0">請求管理</h4>
-            <div>
-                <button class="btn btn-outline-primary me-2" onclick="refreshBills()">
-                    <i class="bi bi-arrow-clockwise"></i> 更新
-                </button>
-                <button class="btn btn-success" onclick="generateMonthlyBills()">
-                    <i class="bi bi-file-earmark-text"></i> 今月請求書生成
-                </button>
-            </div>
         </div>
 
         <!-- 統計情報テーブル -->
@@ -116,16 +108,16 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="fw-bold">今月予定</td>
+                                <td class="fw-bold">2025年9月</td>
                                 <td class="amount-cell">¥2,450,000</td>
                                 <td class="text-center">25件</td>
-                                <td class="amount-cell paid-amount">¥1,850,000</td>
-                                <td class="text-center">18件</td>
-                                <td class="amount-cell pending-amount">¥600,000</td>
-                                <td class="text-center">7件</td>
+                                <td class="amount-cell paid-amount">¥0</td>
+                                <td class="text-center">0件</td>
+                                <td class="amount-cell pending-amount">¥2,450,000</td>
+                                <td class="text-center">25件</td>
                             </tr>
                             <tr>
-                                <td class="fw-bold">先月</td>
+                                <td class="fw-bold">2025年8月</td>
                                 <td class="amount-cell">¥2,200,000</td>
                                 <td class="text-center">22件</td>
                                 <td class="amount-cell paid-amount">¥2,150,000</td>
@@ -134,13 +126,22 @@
                                 <td class="text-center">1件</td>
                             </tr>
                             <tr>
-                                <td class="fw-bold">未入金</td>
-                                <td class="amount-cell">¥450,000</td>
-                                <td class="text-center">5件</td>
+                                <td class="fw-bold">2025年7月</td>
+                                <td class="amount-cell">¥1,800,000</td>
+                                <td class="text-center">18件</td>
+                                <td class="amount-cell paid-amount">¥1,750,000</td>
+                                <td class="text-center">17件</td>
+                                <td class="amount-cell pending-amount">¥50,000</td>
+                                <td class="text-center">1件</td>
+                            </tr>
+                            <tr>
+                                <td class="fw-bold">未入金管理</td>
+                                <td class="amount-cell">¥100,000</td>
+                                <td class="text-center">2件</td>
                                 <td class="amount-cell">¥0</td>
                                 <td class="text-center">0件</td>
-                                <td class="amount-cell pending-amount">¥450,000</td>
-                                <td class="text-center">5件</td>
+                                <td class="amount-cell pending-amount">¥100,000</td>
+                                <td class="text-center">2件</td>
                             </tr>
                         </tbody>
                     </table>
@@ -428,15 +429,7 @@
             alert(`請求書ID ${billId} の督促メールを送信します`);
         }
 
-        // 今月請求書生成
-        function generateMonthlyBills() {
-            alert('今月の請求書を生成します');
-        }
 
-        // 請求を更新
-        function refreshBills() {
-            alert('請求一覧を更新しました');
-        }
 
         // フィルターを適用
         function applyFilters() {
